--- a/index.html
+++ b/index.html
@@ -1,11 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Donation</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      .lexend-font {
+        font-family: "Lexend", serif;
+      }
+    </style>
+  </head>
+  <body class="lexend-font">
+    <header class="sticky top-0 z-10 ">
+      <!-- Navbar Start -->
+        <nav
+        class="flex flex-col lg:flex-row justify-around  gap-5 py-6 bg-[#F9F7F3]"
+      >
+        <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg">Blog</button>
+        <div class="flex justify-center items-center gap-3">
+          <img src="./assets/logo.png" alt="" />
+          <h3 class="text-xl font-bold">Donate Bangladesh</h3>
+        </div>
+        <div class="flex justify-center items-center gap-2">
+          <img src="./assets/coin.png" alt="" />
+          <p class="text-[#111111B3]">5500</p>
+          <p class="text-[#111111B3]">BDT</p>
+        </div>
+      </nav>
+      <!-- Navbar End -->
+
+      <!-- Banner Section Start -->
+
+      <div class="banner flex justify-center items-center gap-6 py-10 bg-white">
+        <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg">
+          Donation
+        </button>
+        <button class="btn font-bold px-6 rounded-lg">History</button>
+      </div>
+
+      <!-- Banner Section End -->
+    </header>
+    <main class="pt-10">
+      <!-- Card - 1 Start-->
+
+      <div
+        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
+      >
+        <div class="card shrink-0">
+          <img src="./assets/noakhali.png" alt="" />
+        </div>
+
+        <div class="text-center lg:text-left">
+          <div class="space-y-5">
+            <div
+              class="flex justify-center items-center md:justify-start gap-1"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-[#111111B3]">0</p>
+              <p class="text-[#111111B3]">BDT</p>
+            </div>
+            <h3 class="text-2xl font-bold">
+              Donate for Flood at Noakhali, Bangladesh
+            </h3>
+            <p>
+              The recent floods in Noakhali have caused significant damage to
+              homes infrastructure. Your donation will help provide essential
+              supplies and to those affected by this disaster. Every
+              contribution, big or small, makes difference. Please join us in
+              supporting the relief efforts and making a positive impact on the
+              lives of those in need.
+            </p>
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Write Donation Amount"
+              class="border border-gray-100 p-3 rounded-lg w-full"
+            /><br />
+            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
+              Donate Now
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Card - 1 End -->
+
+      <!-- Card - 2 Start -->
+      <div
+        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
+      >
+        <div class="card shrink-0">
+          <img src="./assets/feni.png" alt="" />
+        </div>
+
+        <div class="text-center lg:text-left">
+          <div class="space-y-5">
+            <div
+              class="flex justify-center items-center md:justify-start gap-1"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-[#111111B3]">600</p>
+              <p class="text-[#111111B3]">BDT</p>
+            </div>
+            <h3 class="text-2xl font-bold">
+              Donate for Flood Relief in Feni,Bangladesh
+            </h3>
+            <p>
+              The recent floods in Feni have devastated local communities,
+              leading to severe disruption and loss. Your generous donation will
+              help provide immediate aid, including food, clean water, and
+              medical supplies, to those affected by this calamity. Together, we
+              can offer crucial support and help rebuild lives in the aftermath
+              of this disaster. Every contribution counts towards making a real
+              difference. Please consider donating today to assist those in
+              urgent need.
+            </p>
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Write Donation Amount"
+              class="border border-gray-100 p-3 rounded-lg w-full"
+            /><br />
+            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
+              Donate Now
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Card - 2 End -->
+
+      <!-- Card - 3 Start -->
+      <div
+        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto mb-20"
+      >
+        <div class="card shrink-0">
+          <img src="./assets/quota-protest.png" alt="" />
+        </div>
+
+        <div class="text-center lg:text-left">
+          <div class="space-y-5">
+            <div
+              class="flex justify-center items-center md:justify-start gap-1"
+            >
+              <img src="./assets/coin.png" alt="" />
+              <p class="text-[#111111B3]">2400</p>
+              <p class="text-[#111111B3]">BDT</p>
+            </div>
+            <h3 class="text-2xl font-bold">
+              Aid for Injured in the Quota Movement
+            </h3>
+            <p>
+              The recent Quota movement has resulted in numerous injuries and
+              significant hardship for many individuals. Your support is crucial
+              in providing medical assistance, rehabilitation, and necessary
+              supplies to those affected. By contributing, you help ensure that
+              injured individuals receive the care and support they need during
+              this challenging time. Every donation plays a vital role in
+              alleviating their suffering and aiding in their recovery. Please
+              consider making a donation to support these brave individuals in
+              their time of need.
+            </p>
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Write Donation Amount"
+              class="border border-gray-100 p-3 rounded-lg w-full"
+            /><br />
+            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
+              Donate Now
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Card - 3 End -->
+    </main>
+    <footer></footer>
+  </body>
 </html>
