--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </style>
   </head>
   <body class="lexend-font">
-    <header class="sticky top-0 z-10 ">
+    <header class="sticky top-0 z-10">
       <!-- Navbar Start -->
-        <nav
-        class="flex flex-col lg:flex-row justify-around  gap-5 py-6 bg-[#F9F7F3]"
+      <nav
+        class="flex flex-col lg:flex-row justify-around gap-5 py-6 bg-[#F9F7F3]"
       >
         <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg">Blog</button>
         <div class="flex justify-center items-center gap-3">
@@ -39,7 +39,7 @@
         </div>
         <div class="flex justify-center items-center gap-2">
           <img src="./assets/coin.png" alt="" />
-          <p class="text-[#111111B3]">5500</p>
+          <p class="text-[#111111B3]" id="mainBalance">5500</p>
           <p class="text-[#111111B3]">BDT</p>
         </div>
       </nav>
@@ -68,12 +68,14 @@
 
         <div class="text-center lg:text-left">
           <div class="space-y-5">
-            <div
-              class="flex justify-center items-center md:justify-start gap-1"
-            >
-              <img src="./assets/coin.png" alt="" />
-              <p class="text-[#111111B3]">0</p>
-              <p class="text-[#111111B3]">BDT</p>
+            <div class="flex">
+              <div
+                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+              >
+                <img src="./assets/coin.png" alt="" />
+                <p class="text-[#111111B3]" id="amountNoak">20</p>
+                <p class="text-[#111111B3]">BDT</p>
+              </div>
             </div>
             <h3 class="text-2xl font-bold">
               Donate for Flood at Noakhali, Bangladesh
@@ -89,11 +91,11 @@
             <input
               type="text"
               name=""
-              id=""
+              id="inputNoak"
               placeholder="Write Donation Amount"
               class="border border-gray-100 p-3 rounded-lg w-full"
             /><br />
-            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
+            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full" id="btnNoak">
               Donate Now
             </button>
           </div>
@@ -111,12 +113,14 @@
 
         <div class="text-center lg:text-left">
           <div class="space-y-5">
-            <div
-              class="flex justify-center items-center md:justify-start gap-1"
-            >
-              <img src="./assets/coin.png" alt="" />
-              <p class="text-[#111111B3]">600</p>
-              <p class="text-[#111111B3]">BDT</p>
+            <div class="flex">
+              <div
+                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+              >
+                <img src="./assets/coin.png" alt="" />
+                <p class="text-[#111111B3]">0</p>
+                <p class="text-[#111111B3]">BDT</p>
+              </div>
             </div>
             <h3 class="text-2xl font-bold">
               Donate for Flood Relief in Feni,Bangladesh
@@ -156,12 +160,14 @@
 
         <div class="text-center lg:text-left">
           <div class="space-y-5">
-            <div
-              class="flex justify-center items-center md:justify-start gap-1"
-            >
-              <img src="./assets/coin.png" alt="" />
-              <p class="text-[#111111B3]">2400</p>
-              <p class="text-[#111111B3]">BDT</p>
+            <div class="flex">
+              <div
+                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+              >
+                <img src="./assets/coin.png" alt="" />
+                <p class="text-[#111111B3]">0</p>
+                <p class="text-[#111111B3]">BDT</p>
+              </div>
             </div>
             <h3 class="text-2xl font-bold">
               Aid for Injured in the Quota Movement
@@ -192,6 +198,9 @@
       </div>
       <!-- Card - 3 End -->
     </main>
-    <footer></footer>
+
+    <script src="./js/callingFunction.js"></script>
+    <script src="./js/commonFunction.js"></script>
+    
   </body>
 </html>
