DOM for cards are now fully functionable and History and Donation button are working now (change color as well)

--- a/index.html
+++ b/index.html
@@ -48,159 +48,182 @@
       <!-- Banner Section Start -->
 
       <div class="banner flex justify-center items-center gap-6 py-10 bg-white">
-        <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg">
+        <button
+          class="btn font-bold bg-[#B4F461] px-6 rounded-lg"
+          id="donationBtn"
+        >
           Donation
         </button>
-        <button class="btn font-bold px-6 rounded-lg">History</button>
+        <button class="btn font-bold px-6 rounded-lg" id="historyBtn">
+          History
+        </button>
       </div>
 
       <!-- Banner Section End -->
     </header>
     <main class="pt-10">
-      <!-- Card - 1 Start-->
+      <!-- Cards -->
+      <div id="cards">
+        <!-- Card - 1 Start-->
 
-      <div
-        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
-      >
-        <div class="card shrink-0">
-          <img src="./assets/noakhali.png" alt="" />
-        </div>
+        <div
+          class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
+        >
+          <div class="card shrink-0">
+            <img src="./assets/noakhali.png" alt="" />
+          </div>
 
-        <div class="text-center lg:text-left">
-          <div class="space-y-5">
-            <div class="flex">
-              <div
-                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
-              >
-                <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3]" id="amountNoak">20</p>
-                <p class="text-[#111111B3]">BDT</p>
+          <div class="text-center lg:text-left">
+            <div class="space-y-5">
+              <div class="flex">
+                <div
+                  class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+                >
+                  <img src="./assets/coin.png" alt="" />
+                  <p class="text-[#111111B3]" id="amountNoak">20</p>
+                  <p class="text-[#111111B3]">BDT</p>
+                </div>
               </div>
+              <h3 class="text-2xl font-bold">
+                Donate for Flood at Noakhali, Bangladesh
+              </h3>
+              <p>
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <input
+                type="text"
+                name=""
+                id="inputNoak"
+                placeholder="Write Donation Amount"
+                class="border border-gray-100 p-3 rounded-lg w-full"
+              /><br />
+              <button
+                class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full"
+                id="btnNoak"
+              >
+                Donate Now
+              </button>
             </div>
-            <h3 class="text-2xl font-bold">
-              Donate for Flood at Noakhali, Bangladesh
-            </h3>
-            <p>
-              The recent floods in Noakhali have caused significant damage to
-              homes infrastructure. Your donation will help provide essential
-              supplies and to those affected by this disaster. Every
-              contribution, big or small, makes difference. Please join us in
-              supporting the relief efforts and making a positive impact on the
-              lives of those in need.
-            </p>
-            <input
-              type="text"
-              name=""
-              id="inputNoak"
-              placeholder="Write Donation Amount"
-              class="border border-gray-100 p-3 rounded-lg w-full"
-            /><br />
-            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full" id="btnNoak">
-              Donate Now
-            </button>
           </div>
         </div>
-      </div>
-      <!-- Card - 1 End -->
+        <!-- Card - 1 End -->
 
-      <!-- Card - 2 Start -->
-      <div
-        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
-      >
-        <div class="card shrink-0">
-          <img src="./assets/feni.png" alt="" />
-        </div>
+        <!-- Card - 2 Start -->
+        <div
+          class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto"
+        >
+          <div class="card shrink-0">
+            <img src="./assets/feni.png" alt="" />
+          </div>
 
-        <div class="text-center lg:text-left">
-          <div class="space-y-5">
-            <div class="flex">
-              <div
-                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
-              >
-                <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3]">0</p>
-                <p class="text-[#111111B3]">BDT</p>
+          <div class="text-center lg:text-left">
+            <div class="space-y-5">
+              <div class="flex">
+                <div
+                  class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+                >
+                  <img src="./assets/coin.png" alt="" />
+                  <p class="text-[#111111B3]" id="amountFeni">0</p>
+                  <p class="text-[#111111B3]">BDT</p>
+                </div>
               </div>
+              <h3 class="text-2xl font-bold">
+                Donate for Flood Relief in Feni,Bangladesh
+              </h3>
+              <p>
+                The recent floods in Feni have devastated local communities,
+                leading to severe disruption and loss. Your generous donation
+                will help provide immediate aid, including food, clean water,
+                and medical supplies, to those affected by this calamity.
+                Together, we can offer crucial support and help rebuild lives in
+                the aftermath of this disaster. Every contribution counts
+                towards making a real difference. Please consider donating today
+                to assist those in urgent need.
+              </p>
+              <input
+                type="text"
+                name=""
+                id="inputFeni"
+                placeholder="Write Donation Amount"
+                class="border border-gray-100 p-3 rounded-lg w-full"
+              /><br />
+              <button
+                class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full"
+                id="btnFeni"
+              >
+                Donate Now
+              </button>
             </div>
-            <h3 class="text-2xl font-bold">
-              Donate for Flood Relief in Feni,Bangladesh
-            </h3>
-            <p>
-              The recent floods in Feni have devastated local communities,
-              leading to severe disruption and loss. Your generous donation will
-              help provide immediate aid, including food, clean water, and
-              medical supplies, to those affected by this calamity. Together, we
-              can offer crucial support and help rebuild lives in the aftermath
-              of this disaster. Every contribution counts towards making a real
-              difference. Please consider donating today to assist those in
-              urgent need.
-            </p>
-            <input
-              type="text"
-              name=""
-              id=""
-              placeholder="Write Donation Amount"
-              class="border border-gray-100 p-3 rounded-lg w-full"
-            /><br />
-            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
-              Donate Now
-            </button>
           </div>
         </div>
-      </div>
-      <!-- Card - 2 End -->
+        <!-- Card - 2 End -->
 
-      <!-- Card - 3 Start -->
-      <div
-        class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto mb-20"
-      >
-        <div class="card shrink-0">
-          <img src="./assets/quota-protest.png" alt="" />
-        </div>
+        <!-- Card - 3 Start -->
+        <div
+          class="card flex flex-col lg:flex-row max-w-6xl justify-center items-center border border-gray-100 gap-4 p-7 rounded-lg mt-10 mx-auto mb-20"
+        >
+          <div class="card shrink-0">
+            <img src="./assets/quota-protest.png" alt="" />
+          </div>
 
-        <div class="text-center lg:text-left">
-          <div class="space-y-5">
-            <div class="flex">
-              <div
-                class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
-              >
-                <img src="./assets/coin.png" alt="" />
-                <p class="text-[#111111B3]">0</p>
-                <p class="text-[#111111B3]">BDT</p>
+          <div class="text-center lg:text-left">
+            <div class="space-y-5">
+              <div class="flex">
+                <div
+                  class="flex justify-center items-center md:justify-start gap-1 py-2 px-4 bg-gray-200 rounded"
+                >
+                  <img src="./assets/coin.png" alt="" />
+                  <p class="text-[#111111B3]" id="amountQuota">0</p>
+                  <p class="text-[#111111B3]">BDT</p>
+                </div>
               </div>
+              <h3 class="text-2xl font-bold">
+                Aid for Injured in the Quota Movement
+              </h3>
+              <p>
+                The recent Quota movement has resulted in numerous injuries and
+                significant hardship for many individuals. Your support is
+                crucial in providing medical assistance, rehabilitation, and
+                necessary supplies to those affected. By contributing, you help
+                ensure that injured individuals receive the care and support
+                they need during this challenging time. Every donation plays a
+                vital role in alleviating their suffering and aiding in their
+                recovery. Please consider making a donation to support these
+                brave individuals in their time of need.
+              </p>
+              <input
+                type="text"
+                name=""
+                id="inputQuota"
+                placeholder="Write Donation Amount"
+                class="border border-gray-100 p-3 rounded-lg w-full"
+              /><br />
+              <button
+                class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full"
+                id="btnQuota"
+              >
+                Donate Now
+              </button>
             </div>
-            <h3 class="text-2xl font-bold">
-              Aid for Injured in the Quota Movement
-            </h3>
-            <p>
-              The recent Quota movement has resulted in numerous injuries and
-              significant hardship for many individuals. Your support is crucial
-              in providing medical assistance, rehabilitation, and necessary
-              supplies to those affected. By contributing, you help ensure that
-              injured individuals receive the care and support they need during
-              this challenging time. Every donation plays a vital role in
-              alleviating their suffering and aiding in their recovery. Please
-              consider making a donation to support these brave individuals in
-              their time of need.
-            </p>
-            <input
-              type="text"
-              name=""
-              id=""
-              placeholder="Write Donation Amount"
-              class="border border-gray-100 p-3 rounded-lg w-full"
-            /><br />
-            <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg w-full">
-              Donate Now
-            </button>
           </div>
         </div>
+        <!-- Card - 3 End -->
       </div>
-      <!-- Card - 3 End -->
+
+      <!-- History -->
+      <div id="history" class="hidden ">
+        <p>Historyyyyyyyyyyyyyyyyyyyy</p>
+
+      </div>
     </main>
 
     <script src="./js/callingFunction.js"></script>
     <script src="./js/commonFunction.js"></script>
-    
+    <script src="./js/btnFunction.js"></script>
   </body>
 </html>
