History button is fully functionalble and showing the current date-time

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
       </div>
 
       <!-- History -->
-      <div id="history" class="hidden ">
-        <p>Historyyyyyyyyyyyyyyyyyyyy</p>
+      <div id="history" class="hidden mx-16">
+        
 
       </div>
     </main>
