--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav
         class="flex flex-col lg:flex-row justify-around gap-5 py-6 bg-[#F9F7F3]"
       >
-        <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg">Blog</button>
+        <button class="btn font-bold bg-[#B4F461] px-6 rounded-lg" id="blogBtn">Blog</button>
         <div class="flex justify-center items-center gap-3">
           <img src="./assets/logo.png" alt="" />
           <h3 class="text-xl font-bold">Donate Bangladesh</h3>
